# Cabruca

./: CLAUDE.md
.claude/skills/check/: SKILL.md
.claude/skills/observador/: SKILL.md
backend/: .env.example  docker-compose.yml  pyproject.toml  run.py
backend/app/: main.py
backend/app/api/: authz.py  deps.py
backend/app/api/routes/: __init__.py  images.py
backend/app/core/: config.py  dev_auth.py  s3.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  detection.py  image.py  property.py  user.py  user_property.py
backend/migrations/: env.py
backend/migrations/versions/: 27e174f256c3_initial_schema.py  8f3a1c9d2b47_rename_user_properties_created_at_to_.py
backend/scripts/: seed_dev.py
claude-skills/architecture/: SKILL.md
claude-skills/code-review/: SKILL.md
claude-skills/debug/: SKILL.md
claude-skills/deploy-checklist/: SKILL.md
docs/adr/: 0001-classificacao-vs-deteccao.md  0002-inferencia-on-device-vs-nuvem.md  0003-versionamento-de-modelo.md  0004-armazenamento-de-imagens.md  0005-stack-de-backend.md  0006-estrategia-de-upload.md  0007-autenticacao.md  0008-modelo-usuario-propriedade-imagem.md  0009-formato-bounding-box.md
docs/api/: contrato-endpoints.md
